# QModManager

./: Cargo.toml  build.rs
pkg/: README.txt
src/: auth.rs  launch.rs  log.rs  main.rs  pack.rs
src/lib/: auth.rs  cf.rs  instance.rs  invoker.rs  lib.rs  manager.rs  mod.rs  setup.rs
