[package]
name = "QModManager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
directories = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
serde_json = "1.0.128"
tokio = "1.40.0"
zip = "2.2.0"
zip-extract = "0.2.1"
log = "0.4.22"
