[package]
name = "QModManager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.0" ,features = []}
serde = { version = "1.0.210", features = ["derive"] }
chrono = "0.4.38"
directories = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.128"
tokio = "1.40.0"
zip = "2.2.0"
zip-extract = "0.2.1"
log = "0.4.22"
image = "0.25.2"


prettytable-rs = "^0.8"
uuid = { version="0.8", features = ["v4"]}
clap = "2.33.3"
futures = "0.3.14"
hyper = "0.13.8"
ftp = "3.0.1"
indicatif = "0.15.0"
walkdir = "2"
rpassword = "5.0"
subprocess = "0.2.6"
ansi_term = "0.12"
rust-crypto = "^0.2"
fs_extra = "1.2.0"
env_logger = "0.6.1"

winresource = "0.1.17"

[build-dependencies]
winresource = "0.1.17"
